Fix floating footer
Footer now sticks to the bottom of the browser no matter the content
length. This stops users from seeing white space under the footer.

--- a/coviddashboard/static/styles/main.css
+++ b/coviddashboard/static/styles/main.css
@@ -3,6 +3,12 @@ body {
   margin: 0;
 }
 
+/* ============== Body CSS Grid ============== */
+.body {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
 /* ============== Outer CSS grid arrangement and formatting ============== */
 .outer-grid {
   display: grid;
